# anjali-project

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  minimal_rag.py  pytest.ini  requirements-dev.txt  requirements.txt  streamlit_app.py  test_news_feeds.py  test_streamlit_news.py
data/: faiss_index.metadata.json
real_time_rag/: main.py  pyproject.toml  requirements.txt
real_time_rag/backend/ingestion/: rss_ingest.py
src/: __init__.py  config.py  errors.py  main.py
src/embeddings/: __init__.py  embedder.py  typing.py
src/image_generation/: __init__.py  generator.py
src/ingestion/: __init__.py  drive_ingest.py  filewatch_ingest.py  rss_ingest.py
src/langchain_wrapper/: __init__.py  gemini_embeddings.py  pathway_vectorstore.py
src/preprocessing/: __init__.py  cleaner.py
src/utils/: __init__.py  logger.py
src/vectorstores/: __init__.py  faiss_store.py  pathway_client.py
tests/: conftest.py  test_rss.py
tests/fixtures/mock_responses/: gemini_response.json  rss_feed.xml
tests/fixtures/sample_documents/: sample.md  sample.txt
tests/unit/: test_config.py  test_errors.py  test_preprocessing.py
