[project]
name = "real-time-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "faiss-cpu==1.12.0",
    "fastapi==0.115.0",
    "feedparser==6.0.11",
    "langchain>=0.2.16",
    "langchain-community>=0.2.16",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pytest==8.3.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-learn>=1.7.2",
    "sentence-transformers==2.7.0",
    "uvicorn[standard]==0.30.6",
    "watchdog==4.0.2",
]
